--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,9 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+- script: |
+    echo "Hola, Mundo!"
+  displayName: 'Prueba Echo'
+- script: |
+    npm i -g botdispatch
+  displayName: 'Prueba Instala bot dispatch'
